<resources>
    <string name="app_name">AirHockeyAndroid</string>
    <string name="incomplete_credentials">Enter all the credentials</string>
    <string name="purchasePowerUp">Purchase PowerUp</string>
    <string name="sellPowerUp">Sell PowerUp</string>
    <string name="hostGame">Host Game</string>
    <string name="connectToHost">Connect To Host</string>
    <string name="singlePlayerMode">Single Player</string>
    <string name="multiPlayerMode">Multi Player</string>
    <string name="chooseMode">Choose Mode</string>
    <string name="manageProfile">Manage Profile</string>
    <string name="inAppStore">In App Store</string>
    <string name="gameSettings">Game Settings</string>
    <string name="leadershipBoard">Leadership Board</string>
    <string name="exit">Exit</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="update_username">Update username</string>
    <string name="update_password">Update password</string>
    <string name="hint_new_username">New Username</string>
    <string name="hint_old_username">Old Username</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="profile_created">Profile Created</string>
    <string name="profile_already_exist">User already exists</string>
    <string name="no_power_up">You dont have any powerups. Buy them from InAppStore.</string>
    <string name="update_both_fields_or_any_one">Enter either both fields or any one</string>
    <string name="enter_all_info">Enter information in all the fields</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_message">Are you sure?</string>
    <string name="positive">YES</string>
    <string name="negative">NO</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="profile_deleted">Profile Deleted</string>
    <string name="wrong_info">Wrong Information</string>
    <string name="paddle_description">Your paddle size will enlarge for 30 seconds.</string>
    <string name="quant">Buy -  %1$s/10</string>
    <string name="hole_description">Hole size of the opposite player will enlarge for 30 seconds</string>
    <string name="puck_description">The puck quantity will be doubled for 30 seconds </string>
    <string name="coins_remaining">Balance Coins - </string>
    <string name="multi_player_button_text">Multi Player</string>
    <string name="single_player_button_text">Single Player</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="game_over">Game Over</string>
    <string name="insufficient_coins">Insufficient coins</string>
    <string name="no_more_than_ten">You cannot have more than 10 power ups</string>
    <string name="description">Description:</string>

</resources>
