<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="100dp"
    android:weightSum="1">

    <Button
        android:id="@+id/purchase_power_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:text="@string/purchasePowerUp" />

    <Button
        android:id="@+id/sell_power_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margintop"
        android:layout_weight="0.07"
        android:text="@string/sellPowerUp" />

    <Button
        android:id="@+id/host_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margintop"
        android:layout_weight="0.07"
        android:text="@string/hostGame" />

    <Button
        android:id="@+id/connect_to_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margintop"
        android:layout_weight="0.07"
        android:text="@string/connectToHost" />
</LinearLayout>