<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="80dp"
    android:weightSum="1"
    android:background="@drawable/background">

    <Button
        android:id="@+id/choose_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseMode"
        android:alpha="0.8"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/manage_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margintop"
        android:alpha="0.8"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:text="@string/manageProfile" />

    <Button
        android:id="@+id/in_app_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margintop"
        android:alpha="0.8"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:text="@string/inAppStore" />

    <Button
        android:id="@+id/game_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margintop"
        android:alpha="0.8"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:text="@string/gameSettings" />

    <Button
        android:id="@+id/leadership_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margintop"
        android:alpha="0.8"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:text="@string/leadershipBoard" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_margintop"
        android:alpha="0.8"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_background"
        android:text="@string/exit" />
</LinearLayout>