<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/background">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/delete_profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        card_view:cardCornerRadius="4dp"
        android:alpha="0.8">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/delete_profile"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/update_profile_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        card_view:cardCornerRadius="4dp"
        android:alpha="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="19dp"
                        android:text="@string/update_username"
                        android:textColor="#009688"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/update_username_checkbox"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/layout_update_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/update_old_username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/hint_old_username"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:textStyle="bold|italic"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/update_new_username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/hint_new_username"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:textStyle="bold|italic"
                        android:textSize="16sp"/>

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="19dp"
                        android:text="@string/update_password"
                        android:textColor="#009688"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/update_password_checkbox"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/layout_update_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/enter_username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/username"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:textStyle="bold|italic"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/update_old_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/hint_old_password"
                        android:inputType="textPassword"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:textStyle="bold|italic"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/update_new_password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/hint_new_password"
                        android:inputType="textPassword"
                        android:textColorHint="@android:color/black"
                        android:textColor="@android:color/black"
                        android:textStyle="bold|italic"
                        android:textSize="16sp"/>


                </LinearLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/update"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>