<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="20dp"
    android:weightSum="1"
    android:background="@drawable/background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/balance_coins_text"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:text="@string/coins_remaining"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/balance_text"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/balance_coins_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/paddle_pop_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:alpha="0.9"
        card_view:cardCornerRadius="4dp">


        <RelativeLayout
            android:id="@+id/main_paddle_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/paddle_pop_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Paddle Pop - 300 Coins"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_update_paddle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/paddle_pop_text"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/paddle_pop_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/paddle_pop_explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/paddle_pop_description"
                        android:text="@string/paddle_description"
                        android:textSize="14sp"
                        android:textStyle="italic|bold" />


                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/paddle_pop_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_update_paddle"
                android:layout_centerHorizontal="true"
                android:text="@string/quant" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/black_hole_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:alpha="0.9"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/black_hole_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Black Hole - 300 Coins"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_update_hole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/black_hole_text"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/black_hole_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/black_hole_explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/black_hole_description"
                        android:text="@string/hole_description"
                        android:textSize="14sp"
                        android:textStyle="italic|bold" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/black_hole_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_update_hole"
                android:layout_centerHorizontal="true"
                android:text="@string/quant" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/multi_puck_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:alpha="0.9"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/multi_puck_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Multi Puck - 200 Coins"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_multi_puck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/multi_puck_text"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/multi_puck_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/multi_puck_explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/multi_puck_description"
                        android:text="@string/puck_description"
                        android:textSize="14sp"
                        android:textStyle="italic|bold" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/multi_puck_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_multi_puck"
                android:layout_centerHorizontal="true"
                android:text="@string/quant" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>